Adding landing page

--- a/src/main/ui/src/app/core/navbar/navbar.component.scss
+++ b/src/main/ui/src/app/core/navbar/navbar.component.scss
@@ -4,8 +4,13 @@
 
 .icon-display {
   transform: scale(1.5);
+  margin-left: 30px;
 }
 
-.brand-margin {
-  margin-left: 32px;
+.no-margin{
+  margin: 0;
+}
+
+.logo{
+  color: #3f3d56;
 }
