--- a/src/main/ui/src/app/core/navbar/navbar.component.html
+++ b/src/main/ui/src/app/core/navbar/navbar.component.html
@@ -1,26 +1,14 @@
-<!-- <div> -->
-    <!-- <div id="navigation-bar"> -->
-        <!-- <nav> -->
-            <!-- <ul> -->
-                <!-- <div class="nav-item" *ngFor="let item of items"> -->
-                    <!-- <li><a href="#" id="logo">LOGO</a></li> -->
-                    <!-- <li *ngFor="let item of items"><a class="">{{item.name}}</a></li> -->
-                <!-- </div> -->
-            <!-- </ul>
-        </nav>  
-    </div>
-</div> -->
-<p>
+<p class="no-margin">
     <mat-toolbar>
-        <button *ngIf="showBrand" mat-button aria-label="ExpenseTracker Logo">
+        <button class="logo icon-display" *ngIf="showBrand" mat-button aria-label="ExpenseTracker Logo">
             <mat-icon svgIcon="piggybank">ExpenseTracker Logo</mat-icon>ExpenseTracker
         </button>
-        <button *ngFor="let item of items" mat-button aria-label="item.ariaLabel">
+        <a class="button" mat-button *ngFor="let item of leftNavItems" [routerLink]="item.routerLink" aria-label="item.ariaLabel">
             {{item.name}}
-        </button>
+        </a>
         <span class="spacer"></span>
-        <button mat-button aria-label="Sign up button">
-            Sign Up
-        </button>
+        <a class="button" mat-button *ngFor="let item of rightNavItems" [routerLink]="item.routerLink" aria-label="item.ariaLabel">
+            {{item.name}}
+        </a>
   </mat-toolbar>
 </p>
