--- a/src/main/ui/src/app/login/login.component.html
+++ b/src/main/ui/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<header>
+    <app-navbar [showBrand]="navShowBrand" [leftNavItems]="leftNavItems" [rightNavItems]="rightNavItems" ></app-navbar>
+</header>
+<main>
+    
+</main>
+<footer>
+    <app-footer></app-footer>
+</footer>
