--- a/src/main/ui/src/app/register/register.component.html
+++ b/src/main/ui/src/app/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<header>
+    <app-navbar [showBrand]="navShowBrand" [leftNavItems]="leftNavItems" [rightNavItems]="rightNavItems" ></app-navbar>
+</header>
+<main>
+    <div>
+        <mat-grid-list cols="2" rowHeight="100px">
+            <mat-grid-tile colspan="1" rowspan="8">
+                <img src="assets/undraw_traveling_01tc.svg" alt="Relaxation SVG" />            
+            </mat-grid-tile>
+            <mat-grid-tile colspan="1" rowspan="8">
+                <mat-card>
+                    <div id="containerIntro">
+                        <h1>Sign up</h1>
+                        <a routerLink="/login">or log in</a>
+                    </div>
+                    <br>
+                    <app-register-form></app-register-form>
+                </mat-card>
+            </mat-grid-tile>
+        </mat-grid-list>
+    </div>
+</main>
+<footer>
+    <app-footer></app-footer>
+</footer>
