--- a/src/main/ui/src/styles.scss
+++ b/src/main/ui/src/styles.scss
@@ -2,3 +2,34 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+mat-form-field {
+    &.ng-valid {
+      .mat-form-field-wrapper {
+        padding-bottom: 1.25em;
+      }
+    }
+  
+    &.ng-invalid,
+    &.mat-form-field-invalid {
+      .mat-form-field-wrapper {
+        padding-bottom: 7px;
+      }
+    }
+  
+    &.ng-untouched {
+      .mat-form-field-wrapper {
+        padding-bottom: 1.25em;
+      }
+    }
+  
+    .mat-form-field {
+      &-underline {
+        position: static;
+      }
+  
+      &-subscript-wrapper {
+        position: static;
+      }
+    }
+  }
