Successful register and get token from web app, cors enabled on backend

--- a/src/main/ui/src/app/landing/landing.component.html
+++ b/src/main/ui/src/app/landing/landing.component.html
@@ -6,7 +6,7 @@
         <mat-grid-list cols="3" rowHeight="100px">
             <mat-grid-tile colspan="3" rowspan="1">
                 <div style="text-align: center">
-                    <h1>Empowering you to focus on the things you love</h1>
+                    <h1>Empowering you to focus on the things you do best</h1>
                     <a class="button large-button" mat-raised-button color="primary" routerLink="/register" aria-label="Sign up now button">
                         Start for free
                     </a>
