--- a/src/main/ui/src/app/register/register.component.html
+++ b/src/main/ui/src/app/register/register.component.html
@@ -8,10 +8,10 @@
                 <img src="assets/undraw_traveling_01tc.svg" alt="Relaxation SVG" />            
             </mat-grid-tile>
             <mat-grid-tile colspan="1" rowspan="8">
-                <mat-card>
-                    <div id="containerIntro">
+                <mat-card class="center">
+                    <div id="containerIntro" class="parent">
                         <h1>Sign up</h1>
-                        <a routerLink="/login">or log in</a>
+                        <a class="child2" routerLink="/login">or log in</a>
                     </div>
                     <br>
                     <app-register-form></app-register-form>
