--- a/src/main/ui/src/app/register/register-form/register-form.component.html
+++ b/src/main/ui/src/app/register/register-form/register-form.component.html
@@ -1,18 +1,24 @@
-<form [formGroup]="registerFormGroup">
+<form [formGroup]="registerFormGroup" (ngSubmit)="register()">
         <p>
-            <mat-form-field appearance="fill">
+            <mat-form-field [style.width.px]=250 appearance="fill">
                 <mat-label>First name</mat-label>
-                <input matInput>
+                <input matInput formControlName="firstNameFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="registerFormGroup.get('firstNameFormControl')!.hasError('required')">
+                    First name is <strong>required</strong>
+                </mat-error>
             </mat-form-field>
         </p>
         <p>
-            <mat-form-field appearance="fill">
+            <mat-form-field [style.width.px]=250 appearance="fill">
                 <mat-label>Last name</mat-label>
-                <input matInput>
+                <input matInput formControlName="lastNameFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="registerFormGroup.get('lastNameFormControl')!.hasError('required')">
+                    Last name is <strong>required</strong>
+                </mat-error>
             </mat-form-field>
         </p>
         <p>
-            <mat-form-field appearance="fill">
+            <mat-form-field [style.width.px]=250 appearance="fill">
                 <mat-label>Email</mat-label>
                 <input type="email" matInput formControlName="emailFormControl" [errorStateMatcher]="matcher"
                     placeholder="Ex. pat@example.com">
@@ -26,11 +32,11 @@
         </p>
         <div formGroupName="passwordFormGroup">
         <p>
-            <mat-form-field appearance="fill">
+            <mat-form-field [style.width.px]=250 appearance="fill">
                 <mat-label>Password</mat-label>
-                <input type="password" matInput formControlName="passwordFormControl" [errorStateMatcher]="passwordMatcher">
+                <input type="password" matInput formControlName="passwordFormControl" [errorStateMatcher]="passwordMatcher" >
                 <mat-error *ngIf="registerFormGroup['controls'].passwordFormGroup.get('passwordFormControl')!.errors && !registerFormGroup['controls'].passwordFormGroup.get('passwordFormControl')!.hasError('required')">
-                Must be 8-20 characters and contain at least 1 lowercase and capital letter and 1 number
+                Must be 8-20 characters and contain at <br>least 1 lowercase and capital letter and 1 number
                 </mat-error>
                 <mat-error *ngIf="registerFormGroup['controls'].passwordFormGroup.get('passwordFormControl')!.hasError('required')">
                 Password is <strong>required</strong>
@@ -38,7 +44,7 @@
             </mat-form-field>
         </p>
         <p>
-            <mat-form-field appearance="fill">
+            <mat-form-field [style.width.px]=250 appearance="fill">
                 <mat-label>Confirm Password</mat-label>
                 <input type="password" matInput formControlName="confirmPasswordFormControl" [errorStateMatcher]="confirmPasswordMatcher">
                 <mat-error *ngIf="registerFormGroup['controls'].passwordFormGroup.get('confirmPasswordFormControl')!.hasError('required')">
@@ -50,4 +56,5 @@
             </mat-form-field>
         </p>
         </div>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!registerFormGroup.valid">Sign up</button>
 </form>
