--- a/src/main/ui/src/app/register/register.component.scss
+++ b/src/main/ui/src/app/register/register.component.scss
@@ -3,3 +3,15 @@
     display: inline;
     vertical-align: bottom;
 }
+
+.parent {
+    display: flex;
+}
+
+.child2 {
+    margin-left: auto;
+}
+
+.center {
+    text-align: center;
+}
