Adding transaction table to home page

--- a/src/main/ui/src/app/home/home.component.html
+++ b/src/main/ui/src/app/home/home.component.html
@@ -6,19 +6,18 @@
         <mat-drawer-container class="example-container">
             <mat-drawer mode="side" opened>Drawer content</mat-drawer>
             <mat-drawer-content>
-                <mat-grid-list cols="1" rowHeight="100px">
-                    <mat-grid-tile colspan="1" rowspan="4">
-                        <mat-card class="center">
-                            <p>hello</p>
-                            {{expenses$ | async}}
-                        </mat-card>
-                    </mat-grid-tile>
-                    <mat-grid-tile colspan="1" rowspan="4">
-                        <mat-card class="center">
-                            <p>hello</p>
-                        </mat-card>
-                    </mat-grid-tile>
-                </mat-grid-list>
+                <!-- <mat-grid-list cols="1" rowHeight="100px"> -->
+                    <!-- <mat-grid-tile colspan="1" rowspan="4"> -->
+                <mat-card class="center basic-container">
+                    <app-home-transaction-table></app-home-transaction-table>
+                </mat-card>
+                    <!-- </mat-grid-tile> -->
+                    <!-- <mat-grid-tile colspan="1" rowspan="4"> -->
+                <mat-card class="center basic-container">
+                    <p>hello</p>
+                </mat-card>
+                    <!-- </mat-grid-tile> -->
+                <!-- </mat-grid-list> -->
             </mat-drawer-content>
         </mat-drawer-container>
     </div>
