--- a/src/main/ui/src/app/home/home.component.scss
+++ b/src/main/ui/src/app/home/home.component.scss
@@ -1,5 +1,3 @@
-// .example-container {
-//     width: 400px;
-//     height: 100%;
-//     margin: 10px;
-// }
+.basic-container {
+    margin: 80px;
+}
