Adding side nav and correct size table on home page

--- a/src/main/ui/src/app/core/side-nav/side-nav.component.html
+++ b/src/main/ui/src/app/core/side-nav/side-nav.component.html
@@ -1,1 +1,5 @@
-<p>side-nav works!</p>
+<mat-nav-list>
+    <a mat-list-item *ngFor="let item of sideNavItems" [routerLink]="item.routerLink" routerLinkActive="activatedItem === {{item.name}} ? active-link : ''" activated="item.activated" aria-label="item.ariaLabel">
+        {{item.name}}
+    </a>
+</mat-nav-list>
