--- a/src/main/ui/src/app/home/home.component.html
+++ b/src/main/ui/src/app/home/home.component.html
@@ -1,23 +1,16 @@
-<header>
-    <app-navbar [showBrand]="navShowBrand" [leftNavItems]="leftNavItems" [rightNavItems]="rightNavItems" ></app-navbar>
-</header>
 <main>
     <div>
         <mat-drawer-container class="example-container">
-            <mat-drawer mode="side" opened>Drawer content</mat-drawer>
+            <mat-drawer class="side-nav primaryColorBG" mode="side" opened>
+                <aside>
+                    <app-side-nav [sideNavItems]="sideNavItems"></app-side-nav>
+                </aside>
+            </mat-drawer>
             <mat-drawer-content>
-                <!-- <mat-grid-list cols="1" rowHeight="100px"> -->
-                    <!-- <mat-grid-tile colspan="1" rowspan="4"> -->
+                <app-navbar [showBrand]="navShowBrand" [leftNavItems]="leftNavItems" [rightNavItems]="rightNavItems" ></app-navbar>
                 <mat-card class="center basic-container">
                     <app-home-transaction-table></app-home-transaction-table>
                 </mat-card>
-                    <!-- </mat-grid-tile> -->
-                    <!-- <mat-grid-tile colspan="1" rowspan="4"> -->
-                <mat-card class="center basic-container">
-                    <p>hello</p>
-                </mat-card>
-                    <!-- </mat-grid-tile> -->
-                <!-- </mat-grid-list> -->
             </mat-drawer-content>
         </mat-drawer-container>
     </div>
